src/components/app/Details.css
.Details {
  --internal-sidebar-collapse-icon: url(../../../res/img/svg/pane-collapse.svg);
  --internal-sidebar-expand-icon: url(../../../res/img/svg/pane-expand.svg);

  display: flex;

  /* If .Details is squished to a very small size between the sidebar and/or bottom bar,
     don't spill out our contents over those other elements. */
  overflow: clip;
  flex: 1;
  flex-direction: column;
}

/* contains the tabbar and, if present, the sidebar button */
.Details-top-bar {
  --internal-background-color: var(--lowered-background-color);

  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  justify-content: space-between; /* This pushes the sidebar button to the right */
  border: solid var(--base-border-color);
  border-width: 1px 0;
  background: var(--internal-background-color);
  color: var(--base-foreground-color);
}

:root.dark-mode {
  .Details {
    --internal-sidebar-collapse-icon: url(../../../res/img/svg/pane-collapse-light.svg);
    --internal-sidebar-expand-icon: url(../../../res/img/svg/pane-expand-light.svg);
  }
}

.sidebar-open-close-button {
  width: 24px;
  height: 24px;
  flex: none;
  margin: 0 4px;
  background-position: center;
  background-repeat: no-repeat;
}

.sidebar-open-close-button-isopen {
  background-image: var(--internal-sidebar-collapse-icon);
}

.sidebar-open-close-button-isclosed {
  background-image: var(--internal-sidebar-expand-icon);
}

